--- a/Android/TP1/app/src/main/res/layout/activity_hello_world.xml
+++ b/Android/TP1/app/src/main/res/layout/activity_hello_world.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".HelloWorldActivity">
 
+    <TextView
+        android:id="@+id/helloText"
+        android:layout_width="354dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/black"
+        android:gravity="center"
+        android:text="@string/hello_world"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/quitButton"
+        android:layout_width="395dp"
+        android:layout_height="50dp"
+        android:text="@string/quit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/worldMap"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/word_map"
+        app:layout_constraintBottom_toTopOf="@+id/quitButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/helloText"
+        app:srcCompat="@drawable/equirectangular_world_map" />
 </androidx.constraintlayout.widget.ConstraintLayout>
